--- a/consul-server.conf
+++ b/consul-server.conf
@@ -1,4 +1,4 @@
 start on (filesystem and net-device-up IFACE=lo)
 stop on runlevel [!2345]
 
-exec /usr/bin/consul agent -server -bootstrap-expect 1 -data-dir /tmp/consul -bind 10.0.1.10 -ui-dir /tmp/consul/ui -client=10.0.1.10
+exec /usr/bin/consul agent -server -bootstrap-expect 1 -data-dir /tmp/consul -bind 10.0.1.10 -ui-dir /tmp/consul/ui
