Use community currated Docker from Ansible galaxy.

--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -1,2 +1,4 @@
- - src: https://github.com/kompot/ansible-consul
-   name: savagegus.consul
+- src: https://github.com/kompot/ansible-consul
+  name: savagegus.consul
+
+- src: angstwad.docker_ubuntu
