Forward ports correctly for nomad and add Nomad instructions to readme.

--- a/ansible/roles/nomad-server/defaults/main.yml
+++ b/ansible/roles/nomad-server/defaults/main.yml
@@ -3,3 +3,4 @@ nomad_client: false
 nomad_server: true
 nomad_server_bootstrap_expect: 1
 nomad_bind_addr: "{{ ansible_host }}"
+nomad_addresses_http: "127.0.0.1"
