Replace custom Consul Ansible dependency with a less custom one as PRs got accepted.

--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -1,5 +1,5 @@
-- src: https://github.com/kompot/ansible-consul
-  name: savagegus.consul
+- src: savagegus.consul
+  version: master
 
 - src: angstwad.docker_ubuntu
 
