--- a/ansible/roles/consul-client/vars/main.yml
+++ b/ansible/roles/consul-client/vars/main.yml
@@ -7,3 +7,5 @@ consul_bind_address: "{{ ansible_eth1['ipv4']['address'] }}"
 #consul_servers: ["{{ hostvars['consul']['host_ip'] }}"]
 consul_servers: ["192.168.10.10"]
 consul_join_at_start: true
+consul_dns_config: true
+consul_install_dnsmasq: true
