--- a/ansible/roles/nomad-client/vars/main.yml
+++ b/ansible/roles/nomad-client/vars/main.yml
@@ -3,4 +3,4 @@ nomad_client: true
 nomad_server: false
 # TODO replace with DNS request to Consul
 nomad_bind_addr: "{{ ansible_host }}"
-nomad_client_servers: ["192.168.10.20:4647"]
+nomad_client_servers: ["nomad-server.service.consul:4647"]
